--- a/index.html
+++ b/index.html
@@ -11,7 +11,50 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <h1>Welcome to</h1>
-    <h1>Asraf Naim</h1>
+    <!-- top banner start -->
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange-highlight">Asraf Naim</span> Website</h1>
+            <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+            <a target="_blank" class="link-button" href="https://www.google.com/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <!-- top banner end -->
+    <!-- dream area start -->
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+            <a class="link-button" target="_blank" href="https://www.google.com">Download Resume</a>
+        </div>
+    </section>
+    <!-- dream area end -->
+    <!-- experience area start -->
+    <section class="expreience-area">
+        <h2 id="exp">Experience</h2>
+        <div id="pro" class="half-width single-experience" >
+            <h2>Pro Web Developer</h2>
+            <h3 class="orange-highlight">2021-Present</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        </div>
+        <div id="baby" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        </div>
+    </section>
+    <!-- experience area end -->
+    <!-- footer part start -->
+    <footer>
+        <p>All Right Reserved by Asraf Naim</p>
+    </footer>
 </body>
 </html>
