--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <a target="_blank" class="link-button" href="https://www.google.com/">Hire Me</a>
         </div>
         <div class="half-width">
-            <img src="images/jhankar.png" alt="">
+            <img id="avatar-1" src="images/businessman2.PNG" alt="">
         </div>
     </section>
     <!-- top banner end -->
     <!-- dream area start -->
-    <section class="dream-area">
+    <section id="dream-area" class="dream-area">
         <div class="half-width">
-            <img src="images/jhankar2.png" alt="">
+            <img src="images/businessman1.PNG" alt="">
         </div>
         <div class="half-width">
             <h2>Big Dream</h2>
